--- a/_config.yml
+++ b/_config.yml
@@ -18,21 +18,46 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Nicolás Gonik - All things data...
+email: nicogonik@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  👋 Hi! I'm a freelance analytics consultant and Data Engineer :)
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: ngonik
+github_username:  ngonik
+linkedin_username: nicolasgonik
 
 # Build settings
-theme: minima
+# theme: minima
+theme: plainwhite
+
 plugins:
   - jekyll-feed
+
+remote_theme: thelehhman/plainwhite-jekyll
+
+plainwhite:
+  name: Nicolás Gonik
+  tagline: ""
+  date_format: "%b %-d, %Y"
+
+  social_links:
+    twitter: ngonik
+    github: ngonik
+    linkedIn: in/nicolasgonik
+
+  navigation:
+    - title: Home
+      url: "/"
+    - title: Services
+      url: "/services"
+    - title: Blog
+      url: "/services"
+
+  sitemap: true
+
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
